add homological mori program eg

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -460,3 +460,15 @@ shorthand = {Don17},
 	note = {arXiv:1302.0803 [math]},
 	keywords = {Mathematics - Algebraic Geometry, Mathematics - Symplectic Geometry}
 }
+
+@misc{barbacovi_spherical_2021,
+	shorthand = {Bar21},
+	title = {Spherical functors and the flop-flop autoequivalence},
+	url = {http://arxiv.org/abs/2007.14415},
+	publisher = {arXiv},
+	author = {Barbacovi, Federico},
+	month = nov,
+	year = {2021},
+	note = {arXiv:2007.14415 [math]},
+	keywords = {Mathematics - Algebraic Geometry},
+}
